# Thesis-VK-core

./: CMakeLists.txt  LICENCE.md  README.md  test  test.cpp  testing  testing copy.cpp  testing.cpp
.VSCodeCounter/2022-10-17_12-14-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
dependencies/FlagEx/include/: flagex_base.h
dependencies/Sheriff/include/: sheriff-base.h
src/: TVk-core.cpp  TVk-core.h  TVk-creation.h  TVk-log.h  TVk-modular.h  TVk-presets.h  memory.h  pch.h
tests/: CMakeLists.txt
tests/test1/: Test.cpp
